--- a/themes/ESGI-theme/style.css
+++ b/themes/ESGI-theme/style.css
@@ -4835,7 +4835,7 @@ section:last-child {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 2rem;
+  gap: 0rem;
 }
 .site-header .mobile-navigation .mobile-logo {
   max-width: 120px;
@@ -4869,12 +4869,14 @@ section:last-child {
   background: none;
   border: none;
   color: white;
-  font-size: 1rem;
+  font-size: 1.1rem;
   cursor: pointer;
   padding: 0;
   text-align: left;
   transition: color 0.3s ease;
   flex-shrink: 0;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 @media (min-width: 769px) {
   .site-header .mobile-navigation .search-button {
@@ -4889,6 +4891,9 @@ section:last-child {
 }
 .site-header .mobile-navigation .search-button:hover {
   color: #ccc;
+}
+.site-header .mobile-navigation .mobile-nav-menu {
+  margin-top: -1rem;
 }
 @media (min-width: 769px) {
   .site-header .mobile-navigation .mobile-nav-menu {
